--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <nav id="nav_bar">
             <a href="/hw02_css/about_me2.html" target="_blank">About Me</a>
         </nav>
+        <section class="author">
+            <h6>Author: Yarmin Reyes<br>Date: Apr 11, 2024</h6>
+        </section>
     </header>
     <section>
     </section>
